# cpu-performance-tier

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
algorithm/: cpu_performance.json
cpp/: CMakeLists.txt  cpu_performance_tier.cc  cpu_performance_tier.h  generated_rules.inc  generated_tests.cc
docs/: engine-integration.md
src/: generated.rs  lib.rs
tools/: generate.py
