[package]
name = "cpu-performance-tier"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["The Chromium Authors"]
license = "BSD-3-Clause"
description = "Reference CPU performance tier classification algorithm for the Web CPU Performance API"
repository = "https://github.com/hjanuschka/cpu-performance-tier"
readme = "README.md"
keywords = ["cpu", "performance", "web", "browser"]
categories = ["hardware-support", "web-programming"]

[dependencies]
regex = "1"

[features]
default = []
host-info = []
